--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
             {% for c,m in messages %}
 
             <div class="alert alert-{{ c }}">
+            <a href="#" class="close" data-dismiss='alert' aria-label="close">&times;</a>
 
                 {{m}}
             </div>
@@ -62,8 +63,8 @@
       <h1>Welcome to College+</h1>
       <br>
       <div >
-      <a href="student" class ="btn-get-started" >STUDENT</a>
-      <a href="faculty" class ="btn-get-started" >FACULTY</a>
+      <a href="studentlogin" class ="btn-get-started" >STUDENT</a>
+      <a href="facultylogin" class ="btn-get-started" >FACULTY</a>
 </div>
     </div>
   </section><!-- #hero -->
