--- a/templates/newpass.html
+++ b/templates/newpass.html
@@ -30,6 +30,7 @@
             {% for c,m in messages %}
 
             <div class="alert alert-{{ c }}">
+            <a href="#" class="close" data-dismiss='alert' aria-label="close">&times;</a>
 
                 {{m}}
             </div>
