--- a/templates/changepassf.html
+++ b/templates/changepassf.html
@@ -24,6 +24,7 @@
 
 <header id="header">
     <div class="container">
+
       {% with messages =get_flashed_messages(with_categories=true) %}
             {% if messages %}
             {% for c,m in messages %}
@@ -38,34 +39,25 @@
             {% endif %}
             {% endwith %}
     </div>
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li><a href="#">Home</a></li>
-          
-          <li class="menu-has-children"><a href="">services</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-          <li><a href="#">contact us</a></li>
-        </ul>
-      </nav><!-- #nav-menu-container -->
+    
 
 </header><!-- #header -->
 
 <section id="hero">
-
     <div class="hero-container">
-      <h1>Reset password</h1>
-    <div >
-<form method="post" >
-    <input type="text" name="sid" class="getinput" placeholder="sid">
-    <button class='btn-get-started'>send otp</button>
-  </form>
-</div>
+      <h1>change password</h1>
+    <div>
+      
+      
+      <form method="POST">
+      <input type="password" name='currentpass' class="getinput" placeholder="Current passoword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required="">
+      <input type="password" name='password' class="getinput" placeholder="New passoword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required="">
+      <input type="password" name='cpassword' class="getinput" placeholder="confirm new password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required="">
+      <input type="submit" class="btn-get-started" value="confirm" >
+      <br>
+</form>
+
+    </div>
     </div>
 </section><!-- #hero -->
 
