--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="msvalidate.01" content="50901A7A18332D27496284A745775DBD" />
   <meta charset="utf-8">
   <title>College+</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
